--- a/quarkus/build.gradle
+++ b/quarkus/build.gradle
@@ -39,6 +39,7 @@ allOpen {
     annotation("javax.ws.rs.Path")
     annotation("javax.enterprise.context.ApplicationScoped")
     annotation("io.quarkus.test.junit.QuarkusTest")
+    annotation("javax.persistence.Entity")
 }
 
 compileKotlin {
