--- a/quarkus/build.gradle
+++ b/quarkus/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version "1.7.21"
     id "org.jetbrains.kotlin.plugin.allopen" version "1.7.21"
+    id "org.jetbrains.kotlin.plugin.noarg" version "1.7.21"
     id 'io.quarkus'
 }
 
@@ -47,4 +48,8 @@ compileKotlin {
 
 compileTestKotlin {
     kotlinOptions.jvmTarget = JavaVersion.VERSION_17
+}
+
+noArg {
+    annotation("info.novatec.DefaultNoArgConstructor")
 }
